force-app/main/default/objects/Account/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <label>代表者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>