force-app/main/default/objects/Account/fields/RepresentativeKana__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeKana__c</fullName>
    <label>代表者カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>