force-app/main/default/objects/Account/fields/RequestingNewCommodity__c.field-meta.xml
<CustomField>
    <fullName>RequestingNewCommodity__c</fullName>
    <label>依頼中件数(新商材)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>