force-app/main/default/objects/Account/fields/RequestingNum__c.field-meta.xml
<CustomField>
    <fullName>RequestingNum__c</fullName>
    <label>依頼中件数計算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>