force-app/main/default/objects/Account/fields/RequiredManagementFields__c.field-meta.xml
<CustomField>
    <fullName>RequiredManagementFields__c</fullName>
    <label>必須管理項目</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>