force-app/main/default/objects/Account/fields/ServiceContractAll__c.field-meta.xml
<CustomField>
    <fullName>ServiceContractAll__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>サービス_全体</label>
    <referenceTo>ServiceContractAll__c</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>ServiceContractAll71I2</relationshipName>
    <type>Lookup</type>
</CustomField>