force-app/main/default/objects/Account/fields/ServiceContractCancel__c.field-meta.xml
<CustomField>
    <fullName>ServiceContractCancel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>サービス_解約</label>
    <referenceTo>ServiceContractCancel__c</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>q1lh</relationshipName>
    <type>Lookup</type>
</CustomField>