force-app/main/default/objects/Account/fields/ServiceContractChange__c.field-meta.xml
<CustomField>
    <fullName>ServiceContractChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>サービス_入替</label>
    <referenceTo>ServiceContractChange__c</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>ServiceContractChangeUGaQ</relationshipName>
    <type>Lookup</type>
</CustomField>