force-app/main/default/objects/Account/fields/ServiceContractDecisionApplication__c.field-meta.xml
<CustomField>
    <fullName>ServiceContractDecisionApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>サービス_決裁申請</label>
    <referenceTo>ServiceContractDecisionApplication__c</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>ServiceContractDecisionApplication3gdy</relationshipName>
    <type>Lookup</type>
</CustomField>