force-app/main/default/objects/Account/fields/ServiceContractLiving__c.field-meta.xml
<CustomField>
    <fullName>ServiceContractLiving__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>サービス_入居中</label>
    <referenceTo>ServiceContractLiving__c</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>ServiceContractLivingCQ4h</relationshipName>
    <type>Lookup</type>
</CustomField>