force-app/main/default/objects/Account/fields/ServiceContractNewMatter__c.field-meta.xml
<CustomField>
    <fullName>ServiceContractNewMatter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>サービス_新規</label>
    <referenceTo>ServiceContractNewMatter__c</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>ServiceContractNewMatterbDdw</relationshipName>
    <type>Lookup</type>
</CustomField>