force-app/main/default/objects/Account/fields/SpecialMoveInternalCode__c.field-meta.xml
<CustomField>
    <fullName>SpecialMoveInternalCode__c</fullName>
    <label>特入_社内コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>