force-app/main/default/objects/Account/fields/SpecifyTrader__c.field-meta.xml
<CustomField>
    <fullName>SpecifyTrader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>指定業者</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountAccountRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>