force-app/main/default/objects/Account/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>定型</label>
    <length>255</length>
    <type>Text</type>
</CustomField>