force-app/main/default/objects/Account/fields/StandardContractComment__c.field-meta.xml
<CustomField>
    <fullName>StandardContractComment__c</fullName>
    <label>標準契約書コメント</label>
    <type>TextArea</type>
</CustomField>