force-app/main/default/objects/Account/fields/SummaryRemittanceDate__c.field-meta.xml
<CustomField>
    <fullName>SummaryRemittanceDate__c</fullName>
    <label>まとめ送金日</label>
    <type>Date</type>
</CustomField>