force-app/main/default/objects/Account/fields/SynthesisStateCompanyId__c.field-meta.xml
<CustomField>
    <fullName>SynthesisStateCompanyId__c</fullName>
    <label>合成県会社ＩＤ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>