force-app/main/default/objects/Account/fields/testshatakukiteigazou__c.field-meta.xml
<CustomField>
    <fullName>testshatakukiteigazou__c</fullName>
    <label>テスト）社宅規定画像</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>