force-app/main/default/objects/Account/fields/TokutokuServiceApplyRate__c.field-meta.xml
<CustomField>
    <fullName>TokutokuServiceApplyRate__c</fullName>
    <label>得々サービス適用率</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.2</fullName>
                <label>20％</label>
            </value>
            <value>
                <fullName>0.3</fullName>
                <label>30％</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>