force-app/main/default/objects/Account/fields/TransactionBank__c.field-meta.xml
<CustomField>
    <fullName>TransactionBank__c</fullName>
    <label>取引銀行</label>
    <length>255</length>
    <type>Text</type>
</CustomField>