force-app/main/default/objects/Account/fields/WorkPlacePhone__c.field-meta.xml
<CustomField>
    <fullName>WorkPlacePhone__c</fullName>
    <label>(削除)勤務先TEL</label>
    <type>Phone</type>
</CustomField>