force-app/main/default/objects/Account/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <label>委託企業</label>
</RecordType>