force-app/main/default/objects/Account/recordTypes/MovingTrader.recordType-meta.xml
<RecordType>
    <fullName>MovingTrader</fullName>
    <active>true</active>
    <label>引越業者</label>
</RecordType>