force-app/main/default/objects/Account/recordTypes/RealEstateAgency.recordType-meta.xml
<RecordType>
    <fullName>RealEstateAgency</fullName>
    <active>true</active>
    <label>不動産会社/家主</label>
</RecordType>