force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.PHONE2</columns>
    <columns>MainEmail__c</columns>
    <columns>ChargeTeam__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべての取引先</label>
</ListView>